Rename Settings Payment

--- a/application/modules/default/views/scripts/settings/partials/payment.phtml
+++ b/application/modules/default/views/scripts/settings/partials/payment.phtml
@@ -59,7 +59,12 @@
                     <?= $this->paymentform->paypal_mail->setAttrib('tabindex', 24) ?>
                 </div>
             </div>
-            <?php /**
+            <br/>
+            <div class="row">
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+                    <label for="wallet_address">Bitcoin: Your Public Wallet Address</label><br/>Coming in the future</div>
+            </div>
+            <?php /*
             <br/>
             <div class="row">
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
@@ -67,8 +72,7 @@
                 </div>
             </div>
              * 
-             */?>
-            
+             */ ?>
             <?php /* 
             <div class="row margin-top-15">
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
