page detail carousel iframe no border

--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5752,6 +5752,9 @@ main#plings-page{
       border: 1px solid #C4D7EF;
     }   
   }
+  iframe{
+    border: 0px;
+  }
 }
 
 /*update member page*/
