--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -79,7 +79,6 @@ $tableProjectFollower = new Default_Model_DbTable_ProjectFollower();
 $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->project_id);
 
 ?>
-
     <!-- facebook -->
     <div id="fb-root"></div>
 
@@ -107,8 +106,8 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
     </div>
 
 
-    <?php if (Zend_Auth::getInstance()->hasIdentity() && $this->isSupporter($identity->member_id)) { ?>
-    <?php /* if (Zend_Auth::getInstance()->hasIdentity()) { */?>
+    <?php /** 20180111 ronald: vorerst entfernt: if (Zend_Auth::getInstance()->hasIdentity() && $this->isSupporter($identity->member_id)) {**/ ?>
+    <?php if (Zend_Auth::getInstance()->hasIdentity()) { ?>
     <div id="review-product-modal" class="modal" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content" style="padding-bottom: 20px">
@@ -132,7 +131,7 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
         </div>
     </div>
     
-    <?php /**} else {?>
+    <?php } else {?>
         <div id="review-product-modal" class="modal fade noid" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
            <div class="modal-content" style="min-height: 100px; ">
@@ -140,17 +139,17 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
            </div>
          </div>          
         </div>
-    <?php } **/ ?>
+    <?php }?>
 
-    <?php } else {?>
+    <?php /**} else {?>
         <div id="review-product-modal" class="modal fade noid" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
            <div class="modal-content" style="min-height: 100px; ">
-               <span style="text-align: center; display: block; padding-top: 30px">Only registered members with an active supporting can vote<br/>to limit spam and fraud voting.<br/> <a href="/support">Become a supporter</a> <br/><br/>PS: You can still 'Like' a product, but that doesn't affect its score. </span>
+               <span style="text-align: center; display: block; padding-top: 30px">Only registered members with an active supporting can vote. <a href="/support">Become a supporter</a> </span>
            </div>
          </div>          
         </div>
-    <?php } ?>
+    <?php } **/ ?>
 
     <main id="product-page-content">
         <div class="flex-column">
@@ -271,7 +270,7 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
                                 </div><!-- End Carousel Inner -->
 
                                 <!-- Controls -->
-                                <?php if (count($this->galleryPictures) > 1 || ((null != $this->product->embed_code) && (trim($this->product->embed_code)!=''))) { ?>
+                                <?php if (count($this->galleryPictures) > 1 || (count($this->galleryPictures) ==1&&(null != $this->product->embed_code) && (trim($this->product->embed_code)!=''))) { ?>
                                     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                                         <span class="glyphicon glyphicon-chevron-left"></span>
                                     </a>
