--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -143,13 +143,22 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
 
     <?php } else {?>
         <div id="review-product-modal" class="modal fade noid" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-sm" role="document">
+               <div class="modal-content" style="min-height: 150px; ">
+                   <span style="text-align: center; display: block; padding-top: 30px">Only registered members with an active supporting can vote<br/>to limit spam and fraud voting.<br/> <a href="/support">Become a supporter</a> <br/><br/>You can still 'Like' a product, but that doesn't affect its score. </span>
+               </div>
+             </div>          
+        </div>
+        
+    <?php } ?>
+    
+    <div id="like-product-modal" class="modal fade noid" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
-           <div class="modal-content" style="min-height: 150px; ">
-               <span style="text-align: center; display: block; padding-top: 30px">Only registered members with an active supporting can vote<br/>to limit spam and fraud voting.<br/> <a href="/support">Become a supporter</a> <br/><br/>You can still 'Like' a product, but that doesn't affect its score. </span>
+           <div class="modal-content" style="min-height: 100px; ">
+               <span style="text-align: center; display: block; padding-top: 30px">Please login.</span>
            </div>
          </div>          
-        </div>
-    <?php } ?>
+    </div>
 
     <main id="product-page-content">
         <div class="flex-column">
