--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -126,7 +126,19 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
         </div>
     </div>
     
-    <?php } else if (Zend_Auth::getInstance()->hasIdentity() && $this->isSupporter($identity->member_id)) { ?>
+    <?php } else { ?>
+    
+    <div id="like-product-modal" class="modal fade noid" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-sm" role="document">
+           <div class="modal-content" style="min-height: 100px; ">
+               <span style="text-align: center; display: block; padding-top: 30px">Please login.</span>
+           </div>
+         </div>          
+    </div>
+    
+    <?php } ?>
+    
+    <?php if (Zend_Auth::getInstance()->hasIdentity() && $this->isSupporter($identity->member_id)) { ?>
     <div id="review-product-modal" class="modal" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content" style="padding-bottom: 20px">
@@ -161,13 +173,7 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
         
     <?php } ?>
     
-    <div id="like-product-modal" class="modal fade noid" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-sm" role="document">
-           <div class="modal-content" style="min-height: 100px; ">
-               <span style="text-align: center; display: block; padding-top: 30px">Please login.</span>
-           </div>
-         </div>          
-    </div>
+    
 
     <main id="product-page-content">
         <div class="flex-column">
