add package type: Source Code

--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -791,6 +791,7 @@ $categoryPath[] = $valueCatId;
                                     + '<option value=\"3\">OS X compatible</option>'
                                     + '<option value=\"11\">Redhat</option>'
                                     + '<option value=\"6\">Snappy</option>'
+                                    + '<option value=\"12\">Source Code</option>'
                                     + '<option value=\"4\">Windows executable</option>'
                                     + '</select>'
                                     + '</td>'
@@ -984,6 +985,7 @@ $categoryPath[] = $valueCatId;
                                 + '<option value=\"3\">OS X compatible</option>'
                                 + '<option value=\"11\">Redhat</option>'
                                 + '<option value=\"6\">Snappy</option>'
+                                + '<option value=\"12\">Source Code</option>'
                                 + '<option value=\"4\">Windows executable</option>'
                                 + '</select>'
                                 + '</td>'
