--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -342,6 +342,7 @@
                                             + '<option value=\"3\">OS X compatible</option>'
                                             + '<option value=\"11\">Redhat</option>'
                                             + '<option value=\"6\">Snappy</option>'
+                                            + '<option value=\"12\">Source Code</option>'
                                             + '<option value=\"4\">Windows executable</option>'
                                             + '</select><span id="file-tag-packagetype'+this.id+'">'
                                             + '</td>'
@@ -583,6 +584,7 @@
                                                 + '<option value=\"3\">OS X compatible</option>'
                                                 + '<option value=\"11\">Redhat</option>'
                                                 + '<option value=\"6\">Snappy</option>'
+                                                + '<option value=\"12\">Source Code</option>'
                                                 + '<option value=\"4\">Windows executable</option>'
                                                 + '</select><span id="file-tag-packagetype'+this.id+'">'
                                                 + '</td>'
