--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -734,6 +734,7 @@ $this->inlineScript()->appendScript(
                             + '<option value=\"3\">OS X compatible</option>'
                             + '<option value=\"11\">Redhat</option>'
                             + '<option value=\"6\">Snappy</option>'
+                            + '<option value=\"12\">Source Code</option>'
                             + '<option value=\"4\">Windows executable</option>'
                             + '</select>'
                             + '</td>'
@@ -930,6 +931,7 @@ $this->inlineScript()->appendScript(
                         + '<option value=\"3\">OS X compatible</option>'
                         + '<option value=\"11\">Redhat</option>'
                         + '<option value=\"6\">Snappy</option>'
+                        + '<option value=\"12\">Source Code</option>'
                         + '<option value=\"4\">Windows executable</option>'
                         + '</select>'
                         + '</td>'
