--- a/application/modules/backend/views/scripts/store/index.phtml
+++ b/application/modules/backend/views/scripts/store/index.phtml
@@ -169,7 +169,7 @@
                 package_type: {
                     title: 'package type',
                     width: '10%',
-                    options: { '':'', '1': 'AppImage', '7': 'Flatpak', '6': 'Snappy', '5': 'Debian', '2': 'Android (apk)', '3': 'OS X compatible','4': 'Windows executable','8':'Electron-Webapp', '9':'Arch','10':'open/Suse','11':'Redhat'},
+                    options: { '':'', '1': 'AppImage', '7': 'Flatpak', '6': 'Snappy', '5': 'Debian', '2': 'Android (apk)', '3': 'OS X compatible','4': 'Windows executable','8':'Electron-Webapp', '9':'Arch','10':'open/Suse','11':'Redhat','12':'Source Code'},
                     defaultValue: '',
 		            optionsSorting: 'text'
                 },
