--- a/application/modules/default/views/scripts/user/partials/loopMyComments.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyComments.phtml
@@ -53,12 +53,12 @@ $helperPrintDate = new Default_View_Helper_PrintDate();
         ?>
                 <div class="productrow">
                 <div class="row">            
-                         <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">    
+                         <div class="col-lg-2 col-md-2">    
                                 <div class="text-center">
                                     <img class="productimg" src="<?=$this->Image($product['image_small'], array('width' => 80, 'height' => 80))?>" />
                                 </div>
                          </div>
-                         <div class="col-lg-7 col-md-6 col-sm-4 col-xs-4">
+                         <div class="col-lg-6 col-md-6">
                                 <a href="<?=$this->buildProductUrl($product['project_id'],'')?>"><?=$product['title']?>
                                     <span class="version"><?=Default_Model_HtmlPurify::purify($product['version'])?>
                                     </span>
@@ -77,7 +77,10 @@ $helperPrintDate = new Default_View_Helper_PrintDate();
                                
                                 </div>
                          </div>
-                         <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4">
+                         <div class="col-lg-2 col-md-2 small" style="white-space: nowrap; padding-top: 20px">
+                         by <a  href="<?php echo $this->buildMemberUrl($product['member_id']); ?>" class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$product['member_id']?>"><?=$product['username']?></a>
+                         </div>
+                         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                             
                                 <?php                
                                         $this->widgetRating = new stdClass();
